add response for each transaction type. Unfortunately, i had the dirty code on the transaction controller. I also add new method in transaction repository, but haven't validated it yet